# multi-image

./: .gitignore  delimiter_scaling.py  main.py  pyproject.toml  reproduce_results.ipynb  viz_utils.py
lmms-eval/: .gitignore  compare_methods.ipynb  pyproject.toml  results_internvl3_mask_attention.ipynb
lmms-eval/cluster/: cluster_and_evaluate.py  extract_embeddings.py  extract_embeddings_slurm.sh  extract_embeddings_verify_slurm.sh
lmms-eval/clustering_results/: clustering_results.json  mantis_categories.json  sample_assignments.json
lmms-eval/examples/models/: llava_onevision_mask_attention.sh
lmms-eval/lmms_eval/models/: __init__.py
lmms-eval/lmms_eval/models/chat/: internvl_hf.py  internvl_hf_mask_attention.py  internvl_hf_mask_attention_flex_attn.py  qwen2_5_vl.py  qwen2_5_vl_delimiter_scaling.py  qwen2_5_vl_mask_attention.py  qwen2_5_vl_mask_attention_flex_attn.py  qwen2_5_vl_mask_attention_original.py
lmms-eval/lmms_eval/models/simple/: gemma3.py  internvl3.py  internvl3_5_mask_attention.py  internvl3_mask_attention.py  llava_onevision.py  llava_onevision_mask_attention.py  qwen2_5_vl.py  qwen2_5_vl_mask_attention.py
lmms-eval/utils/llava/model/: builder.py  llava_arch.py
lmms-eval/utils/llava/model/language_model/: llava_qwen.py
